Grace/tests/gibbs/errors/t280.grace
// ERROR = P1018
var x
x := .
